Actions
Bug #11734
closedpcic: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 8:
../../common/io/pcic.c: In function 'pcic_set_interrupt': ../../common/io/pcic.c:4747:7: error: cast between incompatible function types from 'int (*)(int, ...)' to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] (ddi_intr_handler_t *)handler->handler; ^ ../../common/io/pcic.c:4760:16: error: cast between incompatible function types from 'int (*)(int, ...)' to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] intr->intr = (ddi_intr_handler_t *)handler->handler; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 7a2e057ded7c57de0de12bba546e48c437d4aba0
commit 7a2e057ded7c57de0de12bba546e48c437d4aba0 Author: Toomas Soome <tsoome@me.com> Date: 2019-10-01T09:39:37.000Z 11734 pcic: cast between incompatible function types Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Dan McDonald <danmcd@joyent.com>
Actions